# hydrarecon

./: .gitignore  CHANGELOG.md  DISCLAIMER.md  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.txt  build-release.sh  docker-compose.yml  esp32_sensing_launcher.py  hydra_3d_visualizer.py  hydra_env_scanner.py  hydra_opengl_scanner.py  hydra_recon_scanner.py  hydra_sensing_visualizer.py  hydra_tomographic_scanner.py  install-quick.sh  install-windows.bat  install.sh  launch.sh  launcher.py  lite.py  main.py  omega_genesis_engine.py  pyproject.toml  quick_test.py  requirements-core.txt  requirements-full.txt  requirements.txt  run.py  setup.py  start.sh  test_apis.py  test_chain_builder.py  test_esp32_advanced.py  test_esp32_integration.py  (+5 more)
core/: __init__.py  access_control.py  ad_attacks.py  advanced_ad_security.py  advanced_api_security.py  advanced_database_security.py  advanced_dns_security.py  advanced_firmware_analysis.py  advanced_http.py  advanced_iot_security.py  advanced_malware_sandbox.py  advanced_memory_forensics.py  advanced_ml_engine.py  advanced_mobile_security.py  advanced_reporting.py  advanced_ssl_security.py  advanced_traffic_analysis.py  advanced_web_spider.py  advanced_wireless_security.py  adversarial_attack_simulator.py  adversarial_ml.py  ai_assistant.py  ai_engine.py  ai_threat_narrator.py  ai_threat_predictor.py  anomaly_detection.py  api_discovery.py  api_gateway.py  api_security.py  asset_inventory.py  attack_orchestrator.py  attack_path_analyzer.py  attack_replay.py  attack_simulation.py  attack_surface_management.py  audit_forensics.py  audit_log.py  automation.py  autonomous_agent.py  autonomous_attack.py  (+159 more)
docs/: API_SETUP.md  USER_GUIDE.md  permanent_word_deletion.md
esp32_firmware/: README.md  build_and_flash.sh  drone_detector.ino
esp32_firmware/remote/: platformio.ini
esp32_firmware/remote/src/: main.cpp
esp32_firmware/sensing/: platformio.ini
esp32_firmware/sensing/src/: main.cpp
firmware/esp32_csi_advanced/: platformio.ini
firmware/esp32_csi_advanced/src/: main.cpp
firmware/esp32_csi_udp/: README.md  platformio.ini
firmware/esp32_csi_udp/src/: main.cpp
gui/: __init__.py  dialogs.py  lite_window.py  main_window.py  notifications.py  splash_screen.py  themes.py  visualizations.py  widgets.py
gui/pages/: __init__.py  access_control_page.py  ad_attacks_page.py  adversarial_ml_page.py  adversarial_simulator_page.py  ai_analysis_page.py  ai_narrator_page.py  api_discovery_page.py  api_security_page.py  asset_inventory_page.py  attack_map_page.py  attack_map_page.py.backup  attack_orchestrator_page.py  attack_path_page.py  attack_replay_page.py  attack_simulation_page.py  attack_surface_page.py  audit_log_page.py  automation_page.py  autonomous_agent_page.py  autonomous_attack_page.py  autonomous_healing_page.py  autonomous_redteam_page.py  backup_assessment_page.py  bcp_page.py  behavioral_biometrics_page.py  blockchain_forensics_page.py  blue_team_page.py  breach_simulation_page.py  browser_exploitation_page.py  bug_bounty_page.py  c2_page.py  cloud_security_page.py  cmdb_page.py  cognitive_threat_page.py  collaboration_hub_page.py  compliance_analyzer_page.py  compliance_audit_page.py  config_baseline_page.py  container_security_page.py  (+85 more)
gui/visualization_3d/: __init__.py  attack_path_3d.py  data_flow_3d.py  engine_3d.py  exploit_chain_3d.py  holographic_display.py  network_topology_3d.py  particle_system.py  threat_globe_3d.py  vr_ar_support.py  wifi_sensing_3d.py
scanners/: __init__.py  base.py  hydra_scanner.py  nmap_scanner.py  osint_advanced.py  osint_scanner.py
tests/: README.md  test_core.py  test_integration.py
tools/: hydra-omega.py  security_audit.py
tools/brain/: consciousness.json  neural-state.json  singularity.json  transcendence.json
