[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrarecon"
version = "1.0.0"
description = "Enterprise Security Assessment Suite - Professional penetration testing and security analysis platform"
readme = "README.md"
license = {text = "Commercial License"}
requires-python = ">=3.10"
authors = [
    {name = "HydraRecon Team", email = "support@hydrarecon.io"}
]
keywords = [
    "security", "penetration-testing", "vulnerability-scanner",
    "osint", "network-security", "cybersecurity", "pentest",
    "ethical-hacking", "security-audit", "red-team"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]

dependencies = [
    # GUI Framework
    "PyQt6>=6.6.0",
    "PyQt6-WebEngine>=6.6.0",
    
    # Network & Security
    "python-nmap>=0.7.1",
    "paramiko>=3.4.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    
    # OSINT & Reconnaissance
    "shodan>=1.31.0",
    "dnspython>=2.4.2",
    "ipwhois>=1.2.0",
    
    # Data Processing
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "sqlalchemy>=2.0.23",
    "aiosqlite>=0.19.0",
    
    # Visualization
    "matplotlib>=3.8.0",
    "networkx>=3.2.1",
    "plotly>=5.18.0",
    
    # Reporting
    "reportlab>=4.0.7",
    "jinja2>=3.1.2",
    "markdown>=3.5.1",
    "python-docx>=1.1.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "click>=8.1.7",
    "tqdm>=4.66.1",
    
    # Security & Crypto
    "cryptography>=41.0.7",
    "bcrypt>=4.1.1",
    
    # Async Support
    "nest-asyncio>=1.5.8",
    
    # Performance
    "psutil>=5.9.0",
    "orjson>=3.9.10",
]

[project.optional-dependencies]
full = [
    "censys>=2.2.0",
    "whois>=0.9.27",
    "python-whois>=0.8.0",
    "builtwith>=1.3.4",
    "pyvis>=0.3.2",
    "openpyxl>=3.1.2",
    "geoip2>=4.8.0",
    "maxminddb>=2.5.1",
    "colorama>=0.4.6",
    "xmltodict>=0.13.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
]
3d = [
    "PyOpenGL>=3.1.7",
    "PyOpenGL-accelerate>=3.1.7",
]
wifi = [
    "scapy>=2.5.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
hydrarecon = "main:main"
hydrarecon-lite = "lite:main"

[project.gui-scripts]
hydrarecon-gui = "launcher:main"

[project.urls]
Homepage = "https://hydrarecon.io"
Documentation = "https://docs.hydrarecon.io"
Repository = "https://github.com/hydrarecon/hydrarecon"
Changelog = "https://github.com/hydrarecon/hydrarecon/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["core", "gui", "scanners", "tools"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.md", "*.txt"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
